first iteration of autozoom with id-parameter in url (e.g. "?id=NG.M.01473")

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "three-canvas-renderer": "^1.0.1",
     "three-trackballcontrols": "0.0.5",
     "three.js-projector": "^3.0.6",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "tween.js": "^16.6.0"
   },
   "devDependencies": {
     "uglify-js": "^2.7.5",
